<resources>
    <string name="app_name">GastoCombustível</string>
    <string name="calculate">CALCULAR</string>
    <string name="r_0">R$ 0</string>
    <string name="your_total_spend_will_be">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="kilometers_per_liter">Quilômetros por litro</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="price">Preço</string>
    <string name="total_kilometers">Total de quilômetros</string>
    <string name="autonomy">Autonomia</string>
    <string name="distance">Distância</string>

    <string name="validation_fill_all_fields">Preencha todos os campos.</string>
</resources>